# fast-workouts

./: .env  .env.example  Dockerfile  FastWorkouts.postman_collection.json  README.md  Workout Tracker Requirements.txt  alembic.ini  docker-compose.yaml  pyproject.toml  todos.txt
alembic/: env.py
alembic/versions/: 07185670e2c8_exercise_category_many_to_many_.py  0a4395ccfe23_initial_models_exercise_categories_.py  0c33d5d10c05_schedule_restructure_fields.py  155037622728_unique_constraint_on_ex_result_set.py  34c8bd959dec_workout_exercise_plans_sessions.py  68974e37ad75_added_trigger_func_exercise_results_.py  6bfbde84817e_added_trigger_func_set_results.py  92382daa25fe_workout_exercises_sets_results_refactor.py  9ebbf6e66081_workout_exercises_sets_results.py  c8334704acb2_workout_session_default_value_started_at.py  cb037c48a27d_workout_exercise_plans_sessions.py  cb37451d4e6c_restructure_scheduling_model.py  ea1b7972ba1b_workout_sessions_exercise_sets_results.py  eb508e11e4c5_tables_for_exercises_groups_categories.py  efdc60be6e59_initial_user_table.py  fd2ee76b9e53_workout_exercises_sets_results_.py
app/: db_triggers.py  main.py  models.py  server.py
app/api/: __init__.py
app/core/: config.py  exceptions.py  setup.py
app/dependencies/: database.py  repositories.py  services.py
app/repositories/: __init__.py  category_repository.py  exercise_plan_repository.py  exercise_repository.py  exercise_result_repository.py  exercise_set_plan_repository.py  exercise_set_result_repository.py  muscle_group_repository.py  workout_plan_repository.py  (+2 more)
app/seed/: run.py  (+17 more)
(+62 files in other folders)
