[project]
name = "fast-workouts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "alembic-utils>=0.8.8",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.5.3",
    "dotenv>=0.9.9",
    "faker>=37.3.0",
    "fastapi[standard]>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "psycopg>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "pytz>=2025.2",
    "resend>=2.10.0",
    "ruff>=0.11.11",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
